tests/pass/return_type.py
def f() -> int:
    return 10


def g() -> int:
    a = 10 + 10

    return a


def h() -> str:
    return "test"


def i() -> str:
    a = "test"

    return a


def j() -> float:
    return 0.0


def k() -> float:
    a = 0.0

    return a


def l() -> bool:
    return True


def m() -> bool:
    a = True

    return a


def n():
    a = "test"


def o() -> None:
    a = "test"


def p() -> None:
    return None
