tests/fail/wrong_return_type.py
def f() -> int:
    return "test"
